fix(ui5-popover): fix content truncation (#4359)
* fix(ui5-popover): fixed content truncation

#4259

* return the dialog minimum width

* added popover min width

--- a/packages/main/src/themes/PopupsCommon.css
+++ b/packages/main/src/themes/PopupsCommon.css
@@ -1,7 +1,6 @@
 :host {
     display: none;
     position: fixed;
-    min-width: 6.25rem;
     background: var(--sapGroup_ContentBackground);
     box-shadow: var(--sapContent_Shadow2);
     border-radius: var(--_ui5-popup-border-radius);
